--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -5,5 +5,5 @@
 
   <label>Password</label>
   <input type="password" name="password" placeholder="Enter your Password" />
-  <button>Sign In</button>
+  <button>Login</button>
 </form>
