--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
           <span> | </span>
         </li>
         <li id="to-right">
-          <a href="/signin">LogIn</a>
+          <a href="/login">Login</a>
           <span> | </span>
         </li>
         <li id="to-right">
