--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -7,3 +7,7 @@
   <input name="password" type="password" placeholder="Enter your Password" />
   <button>Sign Up</button>
 </form>
+
+{{#if error}}
+  <p class="error">Message: {{error}}</p>
+{{/if}}
