--- a/views/auth/private.hbs
+++ b/views/auth/private.hbs
@@ -3,3 +3,11 @@
   , welcome to your site. You only can access this site when you are logged in</p><br
 />
 <p>Good Job</p>
+<div style="width:480px"><iframe
+    allow="fullscreen"
+    frameBorder="0"
+    height="270"
+    src="https://giphy.com/embed/lu01tsQqf1mJuHrFVq/video"
+    width="480"
+  ></iframe></div>
+<a href="/main">Go to your main page</a>
